--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,8 @@ catalog:
   zod: ^3.24.1
   date-fns: ^4.1.0
   drizzle-orm: ^0.39.3
+  "@libsql/client": ^0.14.0
+  "@faker-js/faker": ^9.5.0
 
 catalogs:
   react:
