--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "@repo/typescript-config/base.package.json",
   "compilerOptions": {
-    "outDir": "dist",
     "rootDir": "src",
     "paths": {
       "@/*": ["./src/*"],
       "*": ["./*"]
     },
+    "outDir": "dist"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
