--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "extends": "@repo/typescript-config/base.package.json",
   "compilerOptions": {
-    "outDir": "dist",
     "rootDir": "src",
     "paths": {
       "@/*": ["./src/*"],
       "*": ["./*"]
     },
+    "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist"]
 }
