--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,6 +16,8 @@ catalog:
   drizzle-orm: ^0.39.3
   "@libsql/client": ^0.14.0
   "@faker-js/faker": ^9.5.0
+  "@t3-oss/env-nextjs": ^0.12.0
+  resend: ^4.1.2
 
 catalogs:
   react:
