--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -46,6 +46,7 @@
     "@faker-js/faker": "catalog:",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "catalog:",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.30.4",
