--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,7 +14,6 @@
     }
   },
   "scripts": {
-    "dev": "tsc --watch",
     "build": "tsc",
     "lint": "eslint . --fix"
   },
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "catalog:",
     "dotenv": "^16.4.5",
     "eslint": "catalog:",
     "typescript": "catalog:"
