--- a/apps/web-client/turbo.json
+++ b/apps/web-client/turbo.json
@@ -3,6 +3,7 @@
   "tasks": {
     "build": {
       "passThroughEnv": [
+        "BETTER_AUTH_SECRET",
         "DATABASE_URL",
         "DATABASE_AUTH_TOKEN"
       ]
