--- a/apps/web-client/turbo.json
+++ b/apps/web-client/turbo.json
@@ -5,7 +5,16 @@
       "passThroughEnv": [
         "BETTER_AUTH_SECRET",
         "DATABASE_URL",
-        "DATABASE_AUTH_TOKEN"
+        "DATABASE_AUTH_TOKEN",
+        "RESEND_API_KEY",
+        "OPENAPI_API_KEY",
+        "BLOB_READ_WRITE_TOKEN",
+        "STRIPE_SECRET_KEY",
+        "STRIPE_WEBHOOK_SECRET",
+        "KV_REST_API_TOKEN",
+        "KV_REST_API_URL",
+        "STS_URL",
+        "STS_CERTIFICATE"
       ]
     }
   }
