--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "turbo": "^2.4.4",
-    "typescript": "catalog:",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3"
+    "lint-staged": "^15.4.3",
+    "turbo": "^2.4.4",
+    "typescript": "catalog:"
   },
   "packageManager": "pnpm@9.12.3",
   "engines": {
