feat: website landing

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,20 @@ server {
     listen 80;
 
     # Proxy requests to the correct app based on the hostname
+    server_name www.fatturex.io;
+
+    location / {
+        proxy_pass http://host.docker.internal:3002;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 80;
+
+    # Proxy requests to the correct app based on the hostname
     server_name app.fatturex.io;
 
     location / {
