--- a/apps/web-site/package.json
+++ b/apps/web-site/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@repo/shared": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@vercel/analytics": "catalog:",
     "lucide-react": "catalog:",
     "next": "catalog:react",
     "react": "catalog:react",
