--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,7 @@ catalog:
   "@t3-oss/env-nextjs": ^0.12.0
   resend: ^4.1.2
   "better-auth": ^1.1.17
+  "@vercel/analytics": ^1.5.0
 
 catalogs:
   react:
